Texture tab refreshing problem #36530

Closed
opened 2013-08-21 16:48:22 +02:00 by Nikolay Naidenov · 5 comments

%%%OS: Linux Ubuntu 64-bit
Blender version: v2.68.1

Description:

Texture tab appears empty when switching from an object with existent material and texure to one without (for eg. a lamp) and then back to the one with material and texture.

How to reproduce:

Create a box or whatever object, add a material to it and then add a texture to the material, it doesn't matter what texture. Then create a object that doesn't have material propreties, like for example an area light. Now with the cube selected go to the texture tab, there you will see your texture. While still in the texture tab select the area light, now no texture is visible because the light doesn't have any texture and now when you select the cube the texture is not visible, the texture tab is just a blank space, to fix that you have to go to the material tab and then back to the texture tab to see the texture of the material, so it is probably a matter of refreshing and going back and forth between the material tab and the texture tab.
Hope you understood the problem :)

%%%

%%%OS: Linux Ubuntu 64-bit Blender version: v2.68.1 Description: Texture tab appears empty when switching from an object with existent material and texure to one without (for eg. a lamp) and then back to the one with material and texture. How to reproduce: Create a box or whatever object, add a material to it and then add a texture to the material, it doesn't matter what texture. Then create a object that doesn't have material propreties, like for example an area light. Now with the cube selected go to the texture tab, there you will see your texture. While still in the texture tab select the area light, now no texture is visible because the light doesn't have any texture and now when you select the cube the texture is not visible, the texture tab is just a blank space, to fix that you have to go to the material tab and then back to the texture tab to see the texture of the material, so it is probably a matter of refreshing and going back and forth between the material tab and the texture tab. Hope you understood the problem :) %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%You do not need to go back to material tab, just click on the "material" texture context on top of texture tab is enough. Note also that lamps do have texture data…

I know texture context handling is not always optimal, but it’s very hard to always get it to do what user expects... Will try to see whether there is a nice way to stay/go back to object's tex context automatically, though.%%%

%%%You do not need to go back to material tab, just click on the "material" texture context on top of texture tab is enough. Note also that lamps do have texture data… I know texture context handling is not always optimal, but it’s very hard to always get it to do what user expects... Will try to see whether there is a nice way to stay/go back to object's tex context automatically, though.%%%

%%%Definitively fixed (I hope!) in r59374. Thanks for the report. :)%%%

%%%Definitively fixed (I hope!) in r59374. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thank you for your time and fixing it :)
%%%

%%%Thank you for your time and fixing it :) %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36530
No description provided.